Get record analysis result for frontend (#6)
* [back]feature: refactor record upload flow, add direct file transfer to ML-service, update Swagger

* [back]feature: add user registration endpoint

* [back]feature: add docker-compose

* [back]feature: add GET endpoint to fetch analysis result by recordID]
